--- a/index.html
+++ b/index.html
@@ -205,8 +205,8 @@ https://templatemo.com/tm-571-hexashop
             <div class="row">
                 <div class="col-lg-6">
                     <div class="section-heading">
-                        <h2>Men's Latest</h2>
-                        <span>Details to details is what makes Hexashop different from the other themes.</span>
+                        <h2>Carros em Destaque</h2>
+                        <span>Confira os nossos modelos disponíveis com excelente custo-benefício e qualidade.</span>
                     </div>
                 </div>
             </div>
@@ -228,7 +228,7 @@ https://templatemo.com/tm-571-hexashop
                                     <img src="assets/images/men-01.jpg" alt="">
                                 </div>
                                 <div class="down-content">
-                                    <h4>Classic Spring</h4>
+                                    <h4>Toyota Corolla 2018</h4>
                                     <span>$120.00</span>
                                     <ul class="stars">
                                         <li><i class="fa fa-star"></i></li>
@@ -251,7 +251,7 @@ https://templatemo.com/tm-571-hexashop
                                     <img src="assets/images/men-02.jpg" alt="">
                                 </div>
                                 <div class="down-content">
-                                    <h4>Air Force 1 X</h4>
+                                    <h4>Kia Sportage 2019</h4>
                                     <span>$90.00</span>
                                     <ul class="stars">
                                         <li><i class="fa fa-star"></i></li>
@@ -274,7 +274,7 @@ https://templatemo.com/tm-571-hexashop
                                     <img src="assets/images/men-03.jpg" alt="">
                                 </div>
                                 <div class="down-content">
-                                    <h4>Love Nana ‘20</h4>
+                                    <h4>Nissan Qashqai 2016</h4>
                                     <span>$150.00</span>
                                     <ul class="stars">
                                         <li><i class="fa fa-star"></i></li>
@@ -297,7 +297,7 @@ https://templatemo.com/tm-571-hexashop
                                     <img src="assets/images/men-01.jpg" alt="">
                                 </div>
                                 <div class="down-content">
-                                    <h4>Classic Spring</h4>
+                                    <h4>Hyundai i20 2017</h4>
                                     <span>$120.00</span>
                                     <ul class="stars">
                                         <li><i class="fa fa-star"></i></li>
