--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ https://templatemo.com/tm-571-hexashop
                                     <a href="#">Ver Carros</a>
                                 </div>
                             </div>
-                            <img src="assets/images/left-banner-image.jpg" alt="">
+                            <img src="assets/images/left-banner.jpeg" alt="">
                         </div>
                     </div>
                 </div>
