--- a/index.html
+++ b/index.html
@@ -607,8 +607,8 @@ https://templatemo.com/tm-571-hexashop
             <div class="row">
                 <div class="col-lg-12">
                     <div class="section-heading">
-                        <h2>Social Media</h2>
-                        <span>Details to details is what makes Hexashop different from the other themes.</span>
+                        <h2>Marcas Parceiras</h2>
+                        <span>Trabalhamos com as melhores marcas do mercado.</span>
                     </div>
                 </div>
             </div>
@@ -618,67 +618,67 @@ https://templatemo.com/tm-571-hexashop
                 <div class="col-2">
                     <div class="thumb">
                         <div class="icon">
-                            <a href="http://instagram.com">
+                            <a href="#">
                                 <h6>Fashion</h6>
-                                <i class="fa fa-instagram"></i>
+                                <i class="#"></i>
                             </a>
                         </div>
-                        <img src="assets/images/instagram-01.jpg" alt="">
+                        <img src="assets/images/p1.jpeg" alt="">
                     </div>
                 </div>
                 <div class="col-2">
                     <div class="thumb">
                         <div class="icon">
-                            <a href="http://instagram.com">
+                            <a href="#">
                                 <h6>New</h6>
-                                <i class="fa fa-instagram"></i>
+                                <i class="#"></i>
                             </a>
                         </div>
-                        <img src="assets/images/instagram-02.jpg" alt="">
+                        <img src="assets/images/p2.jpeg" alt="">
                     </div>
                 </div>
                 <div class="col-2">
                     <div class="thumb">
                         <div class="icon">
-                            <a href="http://instagram.com">
+                            <a href="#">
                                 <h6>Brand</h6>
-                                <i class="fa fa-instagram"></i>
+                                <i class="#"></i>
                             </a>
                         </div>
-                        <img src="assets/images/instagram-03.jpg" alt="">
+                        <img src="assets/images/p3.jpeg" alt="">
                     </div>
                 </div>
                 <div class="col-2">
                     <div class="thumb">
                         <div class="icon">
-                            <a href="http://instagram.com">
+                            <a href="#">
                                 <h6>Makeup</h6>
-                                <i class="fa fa-instagram"></i>
+                                <i class="#"></i>
                             </a>
                         </div>
-                        <img src="assets/images/instagram-04.jpg" alt="">
+                        <img src="assets/images/p4.jpeg" alt="">
                     </div>
                 </div>
                 <div class="col-2">
                     <div class="thumb">
                         <div class="icon">
-                            <a href="http://instagram.com">
+                            <a href="#">
                                 <h6>Leather</h6>
-                                <i class="fa fa-instagram"></i>
+                                <i class="#"></i>
                             </a>
                         </div>
-                        <img src="assets/images/instagram-05.jpg" alt="">
+                        <img src="assets/images/p5.jpeg" alt="">
                     </div>
                 </div>
                 <div class="col-2">
                     <div class="thumb">
                         <div class="icon">
-                            <a href="http://instagram.com">
+                            <a href="#">
                                 <h6>Bag</h6>
-                                <i class="fa fa-instagram"></i>
+                                <i class="#"></i>
                             </a>
                         </div>
-                        <img src="assets/images/instagram-06.jpg" alt="">
+                        <img src="assets/images/p6.jpeg" alt="">
                     </div>
                 </div>
             </div>
