--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@ https://templatemo.com/tm-571-hexashop
                                                 </div>
                                             </div>
                                         </div>
-                                        <img src="assets/images/baner-right-image-01.jpg">
+                                        <img src="assets/images/right-banner3.jpeg">
                                     </div>
                                 </div>
                             </div>
@@ -147,7 +147,7 @@ https://templatemo.com/tm-571-hexashop
                                                 </div>
                                             </div>
                                         </div>
-                                        <img src="assets/images/baner-right-image-02.jpg">
+                                        <img src="assets/images/right-banner1.jpeg">
                                     </div>
                                 </div>
                             </div>
@@ -167,7 +167,7 @@ https://templatemo.com/tm-571-hexashop
                                                 </div>
                                             </div>
                                         </div>
-                                        <img src="assets/images/baner-right-image-03.jpg">
+                                        <img src="assets/images/right-banner4.jpeg">
                                     </div>
                                 </div>
                             </div>
@@ -187,7 +187,7 @@ https://templatemo.com/tm-571-hexashop
                                                 </div>
                                             </div>
                                         </div>
-                                        <img src="assets/images/baner-right-image-04.jpg">
+                                        <img src="assets/images/right-banner2.jpeg">
                                     </div>
                                 </div>
                             </div>
