--- a/index.html
+++ b/index.html
@@ -221,11 +221,9 @@ https://templatemo.com/tm-571-hexashop
                                     <div class="hover-content">
                                         <ul>
                                             <li><a href="single-product.html"><i class="fa fa-eye"></i></a></li>
-                                            <li><a href="single-product.html"><i class="fa fa-star"></i></a></li>
-                                            <li><a href="single-product.html"><i class="fa fa-shopping-cart"></i></a></li>
                                         </ul>
                                     </div>
-                                    <img src="assets/images/men-01.jpg" alt="">
+                                    <img src="assets/images/carro-produto1.jpeg" alt="">
                                 </div>
                                 <div class="down-content">
                                     <h4>Toyota Corolla 2018</h4>
@@ -244,11 +242,9 @@ https://templatemo.com/tm-571-hexashop
                                     <div class="hover-content">
                                         <ul>
                                             <li><a href="single-product.html"><i class="fa fa-eye"></i></a></li>
-                                            <li><a href="single-product.html"><i class="fa fa-star"></i></a></li>
-                                            <li><a href="single-product.html"><i class="fa fa-shopping-cart"></i></a></li>
                                         </ul>
                                     </div>
-                                    <img src="assets/images/men-02.jpg" alt="">
+                                    <img src="assets/images/carro-produto2.jpeg" alt="">
                                 </div>
                                 <div class="down-content">
                                     <h4>Kia Sportage 2019</h4>
@@ -267,11 +263,30 @@ https://templatemo.com/tm-571-hexashop
                                     <div class="hover-content">
                                         <ul>
                                             <li><a href="single-product.html"><i class="fa fa-eye"></i></a></li>
-                                            <li><a href="single-product.html"><i class="fa fa-star"></i></a></li>
-                                            <li><a href="single-product.html"><i class="fa fa-shopping-cart"></i></a></li>
                                         </ul>
                                     </div>
-                                    <img src="assets/images/men-03.jpg" alt="">
+                                    <img src="assets/images/carro-produto3.jpeg" alt="">
+                                </div>
+                                <div class="down-content">
+                                    <h4>Nissan Qashqai 2016</h4>
+                                    <span>$150.00</span>
+                                    <ul class="stars">
+                                        <li><i class="fa fa-star"></i></li>
+                                        <li><i class="fa fa-star"></i></li>
+                                        <li><i class="fa fa-star"></i></li>
+                                        <li><i class="fa fa-star"></i></li>
+                                        <li><i class="fa fa-star"></i></li>
+                                    </ul>
+                                </div>
+                            </div>
+                             <div class="item">
+                                <div class="thumb">
+                                    <div class="hover-content">
+                                        <ul>
+                                            <li><a href="single-product.html"><i class="fa fa-eye"></i></a></li>
+                                        </ul>
+                                    </div>
+                                    <img src="assets/images/carro-produto4.jpeg" alt="">
                                 </div>
                                 <div class="down-content">
                                     <h4>Nissan Qashqai 2016</h4>
@@ -290,11 +305,9 @@ https://templatemo.com/tm-571-hexashop
                                     <div class="hover-content">
                                         <ul>
                                             <li><a href="single-product.html"><i class="fa fa-eye"></i></a></li>
-                                            <li><a href="single-product.html"><i class="fa fa-star"></i></a></li>
-                                            <li><a href="single-product.html"><i class="fa fa-shopping-cart"></i></a></li>
                                         </ul>
                                     </div>
-                                    <img src="assets/images/men-01.jpg" alt="">
+                                    <img src="assets/images/carro-produto5.jpeg" alt="">
                                 </div>
                                 <div class="down-content">
                                     <h4>Hyundai i20 2017</h4>
