--- a/index.html
+++ b/index.html
@@ -226,8 +226,8 @@ https://templatemo.com/tm-571-hexashop
                                     <img src="assets/images/carro-produto1.jpeg" alt="">
                                 </div>
                                 <div class="down-content">
-                                    <h4>Toyota Corolla 2018</h4>
-                                    <span>$120.00</span>
+                                    <h4>Kia Sportage 2015</h4>
+                                    <span>10.500.000 Kz </span>
                                     <ul class="stars">
                                         <li><i class="fa fa-star"></i></li>
                                         <li><i class="fa fa-star"></i></li>
@@ -247,8 +247,8 @@ https://templatemo.com/tm-571-hexashop
                                     <img src="assets/images/carro-produto2.jpeg" alt="">
                                 </div>
                                 <div class="down-content">
-                                    <h4>Kia Sportage 2019</h4>
-                                    <span>$90.00</span>
+                                    <h4>Hyundai santa Fé 3.3 </h4>
+                                    <span>10.500.000,00 kz</span>
                                     <ul class="stars">
                                         <li><i class="fa fa-star"></i></li>
                                         <li><i class="fa fa-star"></i></li>
@@ -268,8 +268,8 @@ https://templatemo.com/tm-571-hexashop
                                     <img src="assets/images/carro-produto3.jpeg" alt="">
                                 </div>
                                 <div class="down-content">
-                                    <h4>Nissan Qashqai 2016</h4>
-                                    <span>$150.00</span>
+                                    <h4>Ford Taurus</h4>
+                                    <span>7.400.000.00 kz</span>
                                     <ul class="stars">
                                         <li><i class="fa fa-star"></i></li>
                                         <li><i class="fa fa-star"></i></li>
@@ -289,8 +289,8 @@ https://templatemo.com/tm-571-hexashop
                                     <img src="assets/images/carro-produto4.jpeg" alt="">
                                 </div>
                                 <div class="down-content">
-                                    <h4>Nissan Qashqai 2016</h4>
-                                    <span>$150.00</span>
+                                    <h4>Ford edge</h4>
+                                    <span>7.850.000 kz</span>
                                     <ul class="stars">
                                         <li><i class="fa fa-star"></i></li>
                                         <li><i class="fa fa-star"></i></li>
@@ -310,8 +310,8 @@ https://templatemo.com/tm-571-hexashop
                                     <img src="assets/images/carro-produto5.jpeg" alt="">
                                 </div>
                                 <div class="down-content">
-                                    <h4>Hyundai i20 2017</h4>
-                                    <span>$120.00</span>
+                                    <h4>HYUNDAI ELANTRA  2015</h4>
+                                    <span>7.300.000 kz</span>
                                     <ul class="stars">
                                         <li><i class="fa fa-star"></i></li>
                                         <li><i class="fa fa-star"></i></li>
@@ -329,122 +329,114 @@ https://templatemo.com/tm-571-hexashop
     </section>
     <!-- ***** Men Area Ends ***** -->
 
-    <!-- ***** Women Area Starts ***** -->
-    <section class="section" id="women">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-6">
-                    <div class="section-heading">
-                        <h2>Women's Latest</h2>
-                        <span>Details to details is what makes Hexashop different from the other themes.</span>
-                    </div>
-                </div>
-            </div>
+    <!-- ***** Parts Area Starts ***** -->
+<section class="section" id="parts">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-6">
+        <div class="section-heading">
+          <h2>Peças Genuínas</h2>
+          <span>Peças originais de alta qualidade para todas as marcas, com garantia de desempenho.</span>
         </div>
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <div class="women-item-carousel">
-                        <div class="owl-women-item owl-carousel">
-                            <div class="item">
-                                <div class="thumb">
-                                    <div class="hover-content">
-                                        <ul>
-                                            <li><a href="single-product.html"><i class="fa fa-eye"></i></a></li>
-                                            <li><a href="single-product.html"><i class="fa fa-star"></i></a></li>
-                                            <li><a href="single-product.html"><i class="fa fa-shopping-cart"></i></a></li>
-                                        </ul>
-                                    </div>
-                                    <img src="assets/images/women-01.jpg" alt="">
-                                </div>
-                                <div class="down-content">
-                                    <h4>New Green Jacket</h4>
-                                    <span>$75.00</span>
-                                    <ul class="stars">
-                                        <li><i class="fa fa-star"></i></li>
-                                        <li><i class="fa fa-star"></i></li>
-                                        <li><i class="fa fa-star"></i></li>
-                                        <li><i class="fa fa-star"></i></li>
-                                        <li><i class="fa fa-star"></i></li>
-                                    </ul>
-                                </div>
-                            </div>
-                            <div class="item">
-                                <div class="thumb">
-                                    <div class="hover-content">
-                                        <ul>
-                                            <li><a href="single-product.html"><i class="fa fa-eye"></i></a></li>
-                                            <li><a href="single-product.html"><i class="fa fa-star"></i></a></li>
-                                            <li><a href="single-product.html"><i class="fa fa-shopping-cart"></i></a></li>
-                                        </ul>
-                                    </div>
-                                    <img src="assets/images/women-02.jpg" alt="">
-                                </div>
-                                <div class="down-content">
-                                    <h4>Classic Dress</h4>
-                                    <span>$45.00</span>
-                                    <ul class="stars">
-                                        <li><i class="fa fa-star"></i></li>
-                                        <li><i class="fa fa-star"></i></li>
-                                        <li><i class="fa fa-star"></i></li>
-                                        <li><i class="fa fa-star"></i></li>
-                                        <li><i class="fa fa-star"></i></li>
-                                    </ul>
-                                </div>
-                            </div>
-                            <div class="item">
-                                <div class="thumb">
-                                    <div class="hover-content">
-                                        <ul>
-                                            <li><a href="single-product.html"><i class="fa fa-eye"></i></a></li>
-                                            <li><a href="single-product.html"><i class="fa fa-star"></i></a></li>
-                                            <li><a href="single-product.html"><i class="fa fa-shopping-cart"></i></a></li>
-                                        </ul>
-                                    </div>
-                                    <img src="assets/images/women-03.jpg" alt="">
-                                </div>
-                                <div class="down-content">
-                                    <h4>Spring Collection</h4>
-                                    <span>$130.00</span>
-                                    <ul class="stars">
-                                        <li><i class="fa fa-star"></i></li>
-                                        <li><i class="fa fa-star"></i></li>
-                                        <li><i class="fa fa-star"></i></li>
-                                        <li><i class="fa fa-star"></i></li>
-                                        <li><i class="fa fa-star"></i></li>
-                                    </ul>
-                                </div>
-                            </div>
-                            <div class="item">
-                                <div class="thumb">
-                                    <div class="hover-content">
-                                        <ul>
-                                            <li><a href="single-product.html"><i class="fa fa-eye"></i></a></li>
-                                            <li><a href="single-product.html"><i class="fa fa-star"></i></a></li>
-                                            <li><a href="single-product.html"><i class="fa fa-shopping-cart"></i></a></li>
-                                        </ul>
-                                    </div>
-                                    <img src="assets/images/women-01.jpg" alt="">
-                                </div>
-                                <div class="down-content">
-                                    <h4>Classic Spring</h4>
-                                    <span>$120.00</span>
-                                    <ul class="stars">
-                                        <li><i class="fa fa-star"></i></li>
-                                        <li><i class="fa fa-star"></i></li>
-                                        <li><i class="fa fa-star"></i></li>
-                                        <li><i class="fa fa-star"></i></li>
-                                        <li><i class="fa fa-star"></i></li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+      </div>
+    </div>
+  </div>
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-12">
+        <div class="parts-item-carousel">
+          <div class="owl-parts-item owl-carousel">
+            <div class="item">
+              <div class="thumb">
+                <div class="hover-content">
+                  <ul>
+                    <li><a href="single-product.html"><i class="fa fa-eye"></i></a></li>
+                  </ul>
                 </div>
+                <img src="assets/images/fdo-toyota.jpeg" alt="Filtro de Óleo Toyota">
+              </div>
+              <div class="down-content">
+                <h4>Filtro de Óleo Toyota</h4>
+                <span>15.000 Kz</span>
+                <ul class="stars">
+                  <li><i class="fa fa-star"></i></li>
+                  <li><i class="fa fa-star"></i></li>
+                  <li><i class="fa fa-star"></i></li>
+                  <li><i class="fa fa-star"></i></li>
+                  <li><i class="fa fa-star"></i></li>
+                </ul>
+              </div>
             </div>
+            <div class="item">
+              <div class="thumb">
+                <div class="hover-content">
+                  <ul>
+                    <li><a href="single-product.html"><i class="fa fa-eye"></i></a></li>
+                  </ul>
+                </div>
+                <img src="assets/images/ad-honda.jpeg" alt="Amortecedor Dianteiro Honda">
+              </div>
+              <div class="down-content">
+                <h4>Amortecedor Dianteiro Honda</h4>
+                <span>45.000 Kz</span>
+                <ul class="stars">
+                  <li><i class="fa fa-star"></i></li>
+                  <li><i class="fa fa-star"></i></li>
+                  <li><i class="fa fa-star"></i></li>
+                  <li><i class="fa fa-star"></i></li>
+                  <li><i class="fa fa-star"></i></li>
+                </ul>
+              </div>
+            </div>
+            <div class="item">
+              <div class="thumb">
+                <div class="hover-content">
+                  <ul>
+                    <li><a href="single-product.html"><i class="fa fa-eye"></i></a></li>
+                  </ul>
+                </div>
+                <img src="assets/images/kde-hyndai.jpeg" alt="Kit de Embreagem Hyundai">
+              </div>
+              <div class="down-content">
+                <h4>Kit de Embreagem Hyundai</h4>
+                <span>80.000 Kz</span>
+                <ul class="stars">
+                  <li><i class="fa fa-star"></i></li>
+                  <li><i class="fa fa-star"></i></li>
+                  <li><i class="fa fa-star"></i></li>
+                  <li><i class="fa fa-star"></i></li>
+                  <li><i class="fa fa-star"></i></li>
+                </ul>
+              </div>
+            </div>
+            <div class="item">
+              <div class="thumb">
+                <div class="hover-content">
+                  <ul>
+                    <li><a href="single-product.html"><i class="fa fa-eye"></i></a></li>
+                  </ul>
+                </div>
+                <img src="assets/images/bdc-nissan.jpeg" alt="Bomba de Combustível Nissan">
+              </div>
+              <div class="down-content">
+                <h4>Bomba de Combustível Nissan</h4>
+                <span>60.000 Kz</span>
+                <ul class="stars">
+                  <li><i class="fa fa-star"></i></li>
+                  <li><i class="fa fa-star"></i></li>
+                  <li><i class="fa fa-star"></i></li>
+                  <li><i class="fa fa-star"></i></li>
+                  <li><i class="fa fa-star"></i></li>
+                </ul>
+              </div>
+            </div>
+          </div>
         </div>
-    </section>
-    <!-- ***** Women Area Ends ***** -->
+      </div>
+    </div>
+  </div>
+</section>
+<!-- ***** Parts Area Ends ***** -->
 
     <!-- ***** Kids Area Starts ***** -->
     <section class="section" id="kids">
