--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@ https://templatemo.com/tm-571-hexashop
     <!-- ***** Men Area Ends ***** -->
 
     <!-- ***** Parts Area Starts ***** -->
-<section class="section" id="parts">
+<section class="section" id="women">
   <div class="container">
     <div class="row">
       <div class="col-lg-6">
@@ -344,7 +344,7 @@ https://templatemo.com/tm-571-hexashop
   <div class="container">
     <div class="row">
       <div class="col-lg-12">
-        <div class="parts-item-carousel">
+        <div class="women-item-carousel">
           <div class="owl-parts-item owl-carousel">
             <div class="item">
               <div class="thumb">
