--- a/index.html
+++ b/index.html
@@ -439,7 +439,7 @@ https://templatemo.com/tm-571-hexashop
 <!-- ***** Parts Area Ends ***** -->
 
     <!-- ***** Tires Area Starts ***** -->
-<section class="section" id="tires">
+<section class="section" id="kids">
   <div class="container">
     <div class="row">
       <div class="col-lg-6">
