--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@ https://templatemo.com/tm-571-hexashop
     <div class="row">
       <div class="col-lg-12">
         <div class="women-item-carousel">
-          <div class="owl-parts-item owl-carousel">
+          <div class="owl-women-item owl-carousel">
             <div class="item">
               <div class="thumb">
                 <div class="hover-content">
