--- a/index.html
+++ b/index.html
@@ -462,7 +462,7 @@ https://templatemo.com/tm-571-hexashop
                     <li><a href="single-product.html"><i class="fa fa-eye"></i></a></li>
                   </ul>
                 </div>
-                <img src="assets/images/tire-michelin-205-55r16.jpg" alt="Pneu Michelin 205/55R16">
+                <img src="assets/images/tire-michelin-205-55r16.jpeg" alt="Pneu Michelin 205/55R16">
               </div>
               <div class="down-content">
                 <h4>Pneu Michelin 205/55R16</h4>
@@ -483,7 +483,7 @@ https://templatemo.com/tm-571-hexashop
                     <li><a href="single-product.html"><i class="fa fa-eye"></i></a></li>
                   </ul>
                 </div>
-                <img src="assets/images/tire-pirelli-195-65r15.jpg" alt="Pneu Pirelli 195/65R15">
+                <img src="assets/images/tire-pirelli-195-65r15.jpeg" alt="Pneu Pirelli 195/65R15">
               </div>
               <div class="down-content">
                 <h4>Pneu Pirelli 195/65R15</h4>
@@ -504,7 +504,7 @@ https://templatemo.com/tm-571-hexashop
                     <li><a href="single-product.html"><i class="fa fa-eye"></i></a></li>
                   </ul>
                 </div>
-                <img src="assets/images/tire-bridgestone-225-45r17.jpg" alt="Pneu Bridgestone 225/45R17">
+                <img src="assets/images/tire-bridgestone-225-45r17.jpeg" alt="Pneu Bridgestone 225/45R17">
               </div>
               <div class="down-content">
                 <h4>Pneu Bridgestone 225/45R17</h4>
@@ -525,7 +525,7 @@ https://templatemo.com/tm-571-hexashop
                     <li><a href="single-product.html"><i class="fa fa-eye"></i></a></li>
                   </ul>
                 </div>
-                <img src="assets/images/tire-goodyear-235-65r17.jpg" alt="Pneu Goodyear 235/65R17">
+                <img src="assets/images/tire-goodyear-235-65r17.jpeg" alt="Pneu Goodyear 235/65R17">
               </div>
               <div class="down-content">
                 <h4>Pneu Goodyear 235/65R17</h4>
