--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@ https://templatemo.com/tm-571-hexashop
     <div class="row">
       <div class="col-lg-6">
         <div class="section-heading">
-          <h2>Peças Genuínas</h2>
+          <h2>Peças Genuínas em Destaque</h2>
           <span>Peças originais de alta qualidade para todas as marcas, com garantia de desempenho.</span>
         </div>
       </div>
@@ -444,7 +444,7 @@ https://templatemo.com/tm-571-hexashop
     <div class="row">
       <div class="col-lg-6">
         <div class="section-heading">
-          <h2>Pneus de Carros</h2>
+          <h2>Pneus de Carros em Destaque</h2>
           <span>Pneus de alta qualidade para todos os tipos de veículos, com durabilidade e segurança garantidas.</span>
         </div>
       </div>
@@ -576,12 +576,12 @@ https://templatemo.com/tm-571-hexashop
             </div>
             <div class="col-lg-6">
               <div class="first-image">
-                <img src="assets/images/car-highlight.jpg" alt="Carro em Destaque">
+                <img src="assets/images/car-highlight.jpeg" alt="Carro em Destaque">
               </div>
             </div>
             <div class="col-lg-6">
               <div class="second-image">
-                <img src="assets/images/parts-highlight.jpg" alt="Peças Genuínas">
+                <img src="assets/images/parts-highlight.jpeg" alt="Peças Genuínas">
               </div>
             </div>
             <div class="col-lg-6">
