--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 
     <title>Cesar Motors - Carros e Peças Genuínas</title>
 
+    <link rel="icon" type="image/png" href="assets/images/favicon.png">
+
 
     <!-- Additional CSS Files -->
     <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css">
@@ -689,43 +691,28 @@ https://templatemo.com/tm-571-hexashop
             <div class="row">
                 <div class="col-lg-8">
                     <div class="section-heading">
-                        <h2>By Subscribing To Our Newsletter You Can Get 30% Off</h2>
-                        <span>Details to details is what makes Hexashop different from the other themes.</span>
+                        <h2>Fale Connosco Agora</h2>
+                        <span>Entre em contacto para orçamentos, encomendas ou dúvidas sobre os automóveis.</span>
                     </div>
-                    <form id="subscribe" action="" method="get">
-                        <div class="row">
-                          <div class="col-lg-5">
-                            <fieldset>
-                              <input name="name" type="text" id="name" placeholder="Your Name" required="">
-                            </fieldset>
-                          </div>
-                          <div class="col-lg-5">
-                            <fieldset>
-                              <input name="email" type="text" id="email" pattern="[^ @]*@[^ @]*" placeholder="Your Email Address" required="">
-                            </fieldset>
-                          </div>
-                          <div class="col-lg-2">
-                            <fieldset>
-                              <button type="submit" id="form-submit" class="main-dark-button"><i class="fa fa-paper-plane"></i></button>
-                            </fieldset>
-                          </div>
-                        </div>
-                    </form>
+                      
                 </div>
                 <div class="col-lg-4">
                     <div class="row">
                         <div class="col-6">
                             <ul>
-                                <li>Store Location:<br><span>Sunny Isles Beach, FL 33160, United States</span></li>
-                                <li>Phone:<br><span>010-020-0340</span></li>
-                                <li>Office Location:<br><span>North Miami Beach</span></li>
+                                <li>Localização da Loja:<br><span>Rua Direita do Mercado do Kifica</span></li>
+                                <li>Telefone:<br><span>+244 947 971 026</span></li>
+                                <li>Escritório:<br><span>Bairro Benfica/ Mun. do Talatona</span></li>
+                                <li>Contas Bancárias:<br><span>Conta BFA: 2553117340001<br>IBAN BFA: 0006 0000 5531 1734 3017 6</span><br>
+                             <span>Conta KEVE: 002683441210002<br>IBAN KEVE: 0047 0000 2683 4412 1023 9</span>
+                                </li>
                             </ul>
                         </div>
                         <div class="col-6">
                             <ul>
-                                <li>Work Hours:<br><span>07:30 AM - 9:30 PM Daily</span></li>
-                                <li>Email:<br><span>info@company.com</span></li>
-                                <li>Social Media:<br><span><a href="#">Facebook</a>, <a href="#">Instagram</a>, <a href="#">Behance</a>, <a href="#">Linkedin</a></span></li>
+                                <li>Horário de Funcionamento:<br><span>07:30 AM - 17:30 PM (Seg a Sáb)</span><br><span>08:30 AM - 14:00 PM (Dom)</span></li>
+                                <li>Email:<br><span>cesarmotors244@gmail.com</span></li>
+                                <li>Social Media:<br><span><a href="https://www.facebook.com/eduardocesar.dossantos.54">Facebook</a>, <a href="https://www.instagram.com/eduardocesar.dossantos.54/">Instagram</a>, <a href="#">Behance</a>, <a href="#">Linkedin</a></span></li>
                             </ul>
                         </div>
                     </div>
@@ -742,46 +729,46 @@ https://templatemo.com/tm-571-hexashop
                 <div class="col-lg-3">
                     <div class="first-item">
                         <div class="logo">
-                            <img src="assets/images/white-logo.png" alt="hexashop ecommerce templatemo">
+                            <img src="assets/images/logo.png" alt="cesarmotors logo">
                         </div>
                         <ul>
-                            <li><a href="#">16501 Collins Ave, Sunny Isles Beach, FL 33160, United States</a></li>
-                            <li><a href="#">hexashop@company.com</a></li>
-                            <li><a href="#">010-020-0340</a></li>
+                            <li><a href="#">Bairro Benfica/ Mun. do Talatona</a></li>
+                            <li><a href="#">cesarmotors244@gmail.com</a></li>
+                            <li><a href="#">+244 947 971 026</a></li>
                         </ul>
                     </div>
                 </div>
                 <div class="col-lg-3">
-                    <h4>Shopping &amp; Categories</h4>
+                    <h4>Compras &amp; Categorias</h4>
                     <ul>
-                        <li><a href="#">Men’s Shopping</a></li>
-                        <li><a href="#">Women’s Shopping</a></li>
-                        <li><a href="#">Kid's Shopping</a></li>
+                        <li><a href="#">Carros</a></li>
+                        <li><a href="#">Peças</a></li>
+                        <li><a href="#">Pneus</a></li>
                     </ul>
                 </div>
                 <div class="col-lg-3">
                     <h4>Useful Links</h4>
                     <ul>
-                        <li><a href="#">Homepage</a></li>
-                        <li><a href="#">About Us</a></li>
-                        <li><a href="#">Help</a></li>
-                        <li><a href="#">Contact Us</a></li>
+                        <li><a href="#">Início</a></li>
+                        <li><a href="#">Sobre nós</a></li>
+                        <li><a href="#">ajuda</a></li>
+                        <li><a href="#">Contacto</a></li>
                     </ul>
                 </div>
                 <div class="col-lg-3">
-                    <h4>Help &amp; Information</h4>
+                    <h4>ajuda &amp; informação</h4>
                     <ul>
-                        <li><a href="#">Help</a></li>
+                        <li><a href="#">ajuda</a></li>
                         <li><a href="#">FAQ's</a></li>
-                        <li><a href="#">Shipping</a></li>
-                        <li><a href="#">Tracking ID</a></li>
+                        <li><a href="#">transporte</a></li>
+                        <li><a href="#">ID de rastreamento</a></li>
                     </ul>
                 </div>
                 <div class="col-lg-12">
                     <div class="under-footer">
-                        <p>Copyright © 2022 HexaShop Co., Ltd. All Rights Reserved. 
+                        <p>Copyright © 2025 Cesarmotors., Ltd. All Rights Reserved. 
                         
-                        <br>Design: <a href="https://templatemo.com" target="_parent" title="free css templates">TemplateMo</a></p>
+                        <br>Design: <a href="#" target="_parent" title="free css templates">cesarmotors</a></p>
                         <ul>
                             <li><a href="#"><i class="fa fa-facebook"></i></a></li>
                             <li><a href="#"><i class="fa fa-twitter"></i></a></li>
