--- a/index.html
+++ b/index.html
@@ -729,7 +729,7 @@ https://templatemo.com/tm-571-hexashop
                 <div class="col-lg-3">
                     <div class="first-item">
                         <div class="logo">
-                            <img src="assets/images/logo.png" alt="cesarmotors logo">
+                            <img src="assets/images/logo2.png" alt="cesarmotors logo">
                         </div>
                         <ul>
                             <li><a href="#">Bairro Benfica/ Mun. do Talatona</a></li>
