--- a/index.html
+++ b/index.html
@@ -766,9 +766,9 @@ https://templatemo.com/tm-571-hexashop
                 </div>
                 <div class="col-lg-12">
                     <div class="under-footer">
-                        <p>Copyright © 2025 Cesarmotors., Ltd. All Rights Reserved. 
+                        <p>Copyright © 2025 Cesarmotors., Ltd. Todos os direitos reservados. 
                         
-                        <br>Design: <a href="#" target="_parent" title="free css templates">cesarmotors</a></p>
+                        <br>Desenhado por: <a href="#" target="_parent" title="free css templates">cesarmotors</a></p>
                         <ul>
                             <li><a href="#"><i class="fa fa-facebook"></i></a></li>
                             <li><a href="#"><i class="fa fa-twitter"></i></a></li>
