--- a/index.html
+++ b/index.html
@@ -618,7 +618,7 @@ https://templatemo.com/tm-571-hexashop
                     <div class="thumb">
                         <div class="icon">
                             <a href="#">
-                                <h6>Fashion</h6>
+                                <h6>Toyota</h6>
                                 <i class="#"></i>
                             </a>
                         </div>
@@ -629,7 +629,7 @@ https://templatemo.com/tm-571-hexashop
                     <div class="thumb">
                         <div class="icon">
                             <a href="#">
-                                <h6>New</h6>
+                                <h6>Chevrolet</h6>
                                 <i class="#"></i>
                             </a>
                         </div>
@@ -640,7 +640,7 @@ https://templatemo.com/tm-571-hexashop
                     <div class="thumb">
                         <div class="icon">
                             <a href="#">
-                                <h6>Brand</h6>
+                                <h6>Ford</h6>
                                 <i class="#"></i>
                             </a>
                         </div>
@@ -651,7 +651,7 @@ https://templatemo.com/tm-571-hexashop
                     <div class="thumb">
                         <div class="icon">
                             <a href="#">
-                                <h6>Makeup</h6>
+                                <h6>Hyundai</h6>
                                 <i class="#"></i>
                             </a>
                         </div>
@@ -662,7 +662,7 @@ https://templatemo.com/tm-571-hexashop
                     <div class="thumb">
                         <div class="icon">
                             <a href="#">
-                                <h6>Leather</h6>
+                                <h6>Nissan</h6>
                                 <i class="#"></i>
                             </a>
                         </div>
@@ -673,7 +673,7 @@ https://templatemo.com/tm-571-hexashop
                     <div class="thumb">
                         <div class="icon">
                             <a href="#">
-                                <h6>Bag</h6>
+                                <h6>Kia</h6>
                                 <i class="#"></i>
                             </a>
                         </div>
